--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Hey, consider this my class note for fall2024 EPIB613." # This wil
 #email: "example@mail.com"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
-#linkedin_username: "linkedinuser"
+linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
