--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: "Hey, consider this my class note for fall2024 EPIB613." # This wil
 # All of these are optional and can be removed or commented out
 #email: "example@mail.com"
 #twitter_username: "twitteruser"
-#github_username: "githubuser"
-linkedin_username: "linkedinuser"
+research_gate_username: "githubuser"
+linkedin_username: "https://www.linkedin.com/in/yuze-zheng-079161194/"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
