--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Hey, consider this my class note for fall2024 EPIB613." # This wil
 # All of these are optional and can be removed or commented out
 #email: "example@mail.com"
 #twitter_username: "twitteruser"
-research_gate_username: "githubuser"
+research_gate_username: "https://www.researchgate.net/profile/Yuze-Zheng-2"
 linkedin_username: "https://www.linkedin.com/in/yuze-zheng-079161194/"
 #facebook_username: username
 #flickr_username: username
