--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Hey, consider this my class note for fall2024 EPIB613. Click Link 
 #email: "example@mail.com"
 #twitter_username: "twitteruser"
 #github_username: "https://www.researchgate.net/profile/Yuze-Zheng-2"
-#linkedin_username: "https://www.linkedin.com/in/yuze-zheng-079161194/"
+linkedin_username: "Yuze Zheng"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
