--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 title: "Some R staff"
 author: "Yuze Zheng"
-description: "Hey, consider this my class note for fall2024 EPIB613. Click Link below if you want to know more about me: https://www.researchgate.net/profile/Yuze-Zheng-2" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Hey, consider this my class note for fall2024 EPIB613." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 #email: "example@mail.com"
 #twitter_username: "twitteruser"
 #github_username: "https://www.researchgate.net/profile/Yuze-Zheng-2"
-linkedin_username: "Yuze Zheng"
+#linkedin_username: "Yuze Zheng"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
