--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Some R staff"
+title: "Just Some R Stuff"
 author: "Yuze Zheng"
 description: "Hey, consider this my class note for fall2024 EPIB613." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
