--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Just Some R Stuff"
 author: "Yuze Zheng"
-description: "Hey, consider this my class note for fall2024 EPIB613." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Hey, consider this my class note for all R stuff fall 2024 to spring 2025." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
